--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,12 @@ body {
   background-color: $westar;
 }
 
+h1 {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
 // .container {
 //   background-color: #000;
 // }
