--- a/styles/main.scss
+++ b/styles/main.scss
@@ -88,6 +88,7 @@ section {
   width: 100%;
   background: url("/bolha-sabao.png") center top;
   background-color: $twine;
+  text-align: center;
 }
 
 .form-google {
