--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,12 @@ $copper: #be6932;
 $pine: #529b94;
 $laurel: #a5b6a4;
 $westar: #DFDED3;
+$martinFont: austieBostDreamboat, fantasy;
+
+@font-face {
+  font-family: austieBostDreamboat;
+  src: url(/austie-bost-dreamboat.ttf);
+}
 
 body {
   background-color: $westar;
@@ -52,6 +58,7 @@ section {
   }
   
   .card {
+    font-family: fantasy;
     width: 300px;
     margin-left: -300px;
     height: 250px;
@@ -91,6 +98,7 @@ section {
   background-size: auto 50px, auto 50px;
   background-color: $pine;
   color: #fff;
+  line-height: 1.1em;
 }
 
 .donate-list {
@@ -110,7 +118,7 @@ section {
     margin: 0 0;
     padding: 10px;
     width: 100%;
-    max-width: 320px;
+    max-width: 340px;
     text-align: center;
     background-color: rgba($color: #000, $alpha: .2);
   }
