add donate infos

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -114,13 +114,19 @@ section {
     border-radius: 50%;
   }
 
-  li {
+  .card {
     margin: 0 0;
     padding: 10px;
     width: 100%;
-    max-width: 340px;
+    max-width: 500px;
     text-align: center;
     background-color: rgba($color: #000, $alpha: .2);
+  }
+
+  ol li {
+    text-align: left;
+    font-size: 15px;
+    margin: 10px 0 10px;
   }
 }
 
